@@ -111,7 +111,7 @@ even when there is no EDP peer detected.
 Force to send LLDP packets even when there is no LLDP peer detected
 but there is a peer speaking another protocol detected. By default,
 LLDP packets are sent when there is a peer speaking LLDP detected or
-when there is no peer at all.
+when there is no peer at all. If repeated, LLDP is disabled.
 .It Fl r
 Receive-only mode. With this switch,
 .Nm
